--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <permission
-        android:name="com.xiaomi.micolauncher.feature.appmainscreen.permission.READ_SETTINGS"
+        android:name="com.xiaomi.micolauncher.feature.appmainscreen.permission.READ_SETTINGS2"
         android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
         android:protectionLevel="signatureOrSystem"
         android:label="@string/permlab_read_settings"
         android:description="@string/permdesc_read_settings"/>
     <permission
-        android:name="com.xiaomi.micolauncher.feature.appmainscreen.permission.WRITE_SETTINGS"
+        android:name="com.xiaomi.micolauncher.feature.appmainscreen.permission.WRITE_SETTINGS2"
         android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
         android:protectionLevel="signatureOrSystem"
         android:label="@string/permlab_write_settings"
         android:description="@string/permdesc_write_settings"/>
 
     <permission
-        android:name="com.android.launcher.permission.INSTALL_SHORTCUT"
+        android:name="com.android.launcher.permission.INSTALL_SHORTCUT2"
         android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
         android:protectionLevel="dangerous"
         android:label="@string/permlab_install_shortcut"
@@ -138,7 +138,7 @@
 
         <provider
             android:name=".LauncherProvider"
-            android:authorities="com.xiaomi.micolauncher.settings"
+            android:authorities="com.xiaomi.micolauncher.settings2"
             android:exported="true"
             android:writePermission="com.xiaomi.micolauncher.feature.appmainscreen.permission.WRITE_SETTINGS"
             android:readPermission="com.xiaomi.micolauncher.feature.appmainscreen.permission.READ_SETTINGS" />
